# area-51

./: .env copy.example  .gitignore  CONTRIBUTING.md  README.md  USECASE.md  agent.py  mcp.py  pyproject.toml  server.py  setup.py
integrations/: __init__.py  confluence_client.py  jira_client.py  jira_kb_setup.ipynb  notion_client.py  setup_zendesk_kb.py  zendesk_client.py
models/: __init__.py  common.py  confluence_page.py  jira_issue.py  zendesk_ticket.py
tools/: search.py
utils/: setup_datasource.py  setup_kb.py  start_pgvector.sh
utils/confluence/: setup_kb.py  start_pgvector.sh  stop_pgvector.sh
