[project]
name = "area51"
version = "0.1.0"
description = "Zendesk + JIRA + Confluence integration with semantic search"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "tenacity>=8.2.0",
    "mindsdb-sdk>=1.0.0",
    "python-dotenv>=1.0.0",
]


